--- a/src/components/WorkItem/WorkItem.css
+++ b/src/components/WorkItem/WorkItem.css
@@ -1,7 +1,7 @@
 .media {
-    background-color: #d1cdca;
-    color:#a75629;
-    border: solid 1px #a75629;
+    background-color: #f7f7f7;
+    color:#2c2d2f;
+    border: solid 1px #2c2d2f;
     padding:2%;
     border-top-right-radius: 5%;
     box-shadow: 3px 3px 15px 10px rgba(168,168,168, 0.6);
