--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 //Colors
-// $color-primary:#1a3db3;
-// $color-primary-light:#053cf7;
-// $color-primary-dark:#05207b;
+$color-primary:#dddfde;
+$color-primary-light:#91A2F0;
+$color-primary-dark:#2B3977;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
@@ -10,10 +10,10 @@ $color-grey-light-2: #eee;
 $color-grey-dark-1: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
-// $color-secondary-light:rgb(231, 164, 109);
-// $color-secondary-dark: rgb(233, 117, 22);
-// $color-tertiary-light:rgb(133, 231, 109);
-// $color-tertiary-dark: rgb(72, 230, 32);
+$color-secondary-light:rgb(118, 223, 162);
+$color-secondary-dark: rgb(26, 85, 51);
+$color-tertiary-light:rgb(132, 101, 172);
+$color-tertiary-dark: rgb(57, 43, 75);
 //Grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
