--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,97 @@ body {
     width: 100%;
     object-fit: cover !important; }
 
+.btn__text:link, .btn__text:visited {
+  display: inline-block;
+  text-decoration: none;
+  padding: 3px;
+  transition: all .3s;
+  color: #000;
+  font-size: 1.6rem; }
+
+.btn__text:hover {
+  background-color: #333;
+  color: #fff;
+  transform: scale(1.2) translateY(-3px); }
+
+.btn__text:active {
+  transform: translateY(0);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); }
+
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem; }
+  .card__image {
+    max-height: 20rem;
+    width: 100%; }
+  .card__text-booking {
+    text-align: center;
+    color: #000;
+    padding: 2rem 1rem; }
+  .card__text-heading2 {
+    padding: 2rem;
+    text-align: center; }
+  .card__side {
+    height: 50rem;
+    transition: all .8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background-color: #fff; }
+  .card__picture {
+    background-size: cover;
+    height: 30rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
+    .card__picture-1 {
+      background-image: linear-gradient(to right bottom, #76dfa2, #1a5533), url(./images/photo1.jpg); }
+    .card__picture-2 {
+      background-image: linear-gradient(to right bottom, #8465ac, #392b4b), url(./images/photo2.jpg); }
+    .card__picture-3 {
+      background-image: linear-gradient(to right bottom, #91A2F0, #2B3977), url(./images/photo3.jpg); }
+  .card__heading {
+    font-size: 2.5rem;
+    font-weight: 500;
+    color: #fff;
+    position: absolute;
+    top: 10rem;
+    right: 2rem;
+    text-align: right;
+    width: 80%; }
+  .card__heading-span {
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span-1 {
+      background-image: linear-gradient(to right bottom, #76dfa2, #1a5533); }
+    .card__heading-span-2 {
+      background-image: linear-gradient(to right bottom, #8465ac, #392b4b); }
+    .card__heading-span-3 {
+      background-image: linear-gradient(to right bottom, #91a2f0, #2b3977); }
+  .card__detail {
+    padding: 3rem;
+    margin: 0 auto; }
+    .card__detail p {
+      width: 80%;
+      text-align: center;
+      font-size: 2rem;
+      padding: 2rem;
+      margin: 0 auto; }
+  .card__text--ul {
+    list-style-type: none; }
+  .card__text--li {
+    border-bottom: solid 1px #f7f7f7; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(247, 247, 247, 0.6), rgba(119, 119, 119, 0.6));
@@ -186,3 +277,6 @@ body {
     left: 40px; }
   .header--logo {
     height: 100px; }
+
+.section-testimonials {
+  position: relative; }
