--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,9 @@
 @import "base/utilities";
 @import "components/testimonials";
 @import "components/bg-video";
+@import "components/button";
+@import "components/problem";
 @import "layout/header";
 @import "layout/grid";
 @import "layout/footer";
+@import "layout/home";
