--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,19 +1,19 @@
 //Colors
-$color-primary:#dddfde;
+$color-primary:rgb(57, 77, 158);
 $color-primary-light:#91A2F0;
 $color-primary-dark:#2B3977;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 $color-grey-light-1: #f7f7f7;
-$color-grey-light-2: #eee;
+$color-grey-light-2: rgb(207, 207, 207);
 $color-grey-dark-1: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
-$color-secondary-light:rgb(118, 223, 162);
-$color-secondary-dark: rgb(26, 85, 51);
-$color-tertiary-light:rgb(132, 101, 172);
-$color-tertiary-dark: rgb(57, 43, 75);
+$color-secondary-light:#e4b653;
+$color-secondary-dark: #77602b;
+$color-tertiary-light:#e96a4d;
+$color-tertiary-dark: #773a2b;
 //Grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
