--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -23,6 +23,7 @@ html {
 
 body {
     box-sizing: border-box;
+    background-color: $color-grey-light-2;
     @include responsive(tab-port) {
         padding: 0;
     }
