--- a/src/sass/components/_problem.scss
+++ b/src/sass/components/_problem.scss
@@ -3,10 +3,16 @@
     perspective: 150rem;
     -moz-perspective: 150rem;
     position: relative;
-    height: 50rem;
+    height: 65rem;
+    @include responsive(tab-port) {
+        padding: 2rem;
+    }
     &__image {
         max-height:20rem;
         width: 100%;
+        @include responsive(tab-port) {
+            height:30rem;
+        }
     }
     &__text{
         &-booking{
@@ -18,10 +24,17 @@
             padding: 2rem;
             text-align: center;
         }
+        &--li {
+            padding: 3px;
+
+        }
+        &--ul {
+            list-style-type: none;
+        }
     }
      
     &__side {
-        height: 50rem;
+        height: 65rem;
         transition: all .8s ease;
         position: absolute;
         top: 0;
@@ -45,6 +58,10 @@
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
+        @include responsive(tab-port) {
+            background-size: 50% auto;
+            
+        }
         &-1 {
             background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(./images/photo1.jpg);
         }
@@ -65,6 +82,11 @@
         right: 2rem;
         text-align: right;
         width: 80%;
+        @include responsive(tab-port) {
+            right: 6rem;
+            font-size: 3rem;
+            
+        }
     }
     &__heading-span {
         
@@ -90,14 +112,6 @@
             font-size: 2rem;
             padding: 2rem;
             margin: 0 auto;
-        }
-    }
-    &__text {
-        &--ul {
-            list-style-type: none;
-        }
-        &--li {
-            padding: 5px;
         }
     }
     
