--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ html {
   @media (max-width: 75em) {
     html {
       font-size: 56.25%; } }
-  @media (max-width: 56.25em) {
+  @media (max-width: 990px) {
     html {
       font-size: 50%; } }
   @media (min-width: 112em) {
@@ -32,8 +32,9 @@ html {
       font-size: 75%; } }
 
 body {
-  box-sizing: border-box; }
-  @media (max-width: 56.25em) {
+  box-sizing: border-box;
+  background-color: #cfcfcf; }
+  @media (max-width: 990px) {
     body {
       padding: 0; } }
 
@@ -65,6 +66,13 @@ body {
     opacity: 1;
     transform: translateY(0); } }
 
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: #777; }
+
 .u-center-text {
   text-align: center !important; }
 
@@ -73,13 +81,13 @@ body {
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
-  @media (max-width: 56.25em) {
+  @media (max-width: 990px) {
     .u-margin-bottom-medium {
       margin-bottom: 3rem !important; } }
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
-  @media (max-width: 56.25em) {
+  @media (max-width: 990px) {
     .u-margin-bottom-big {
       margin-bottom: 5rem !important; } }
 
@@ -103,7 +111,7 @@ body {
   padding-left: 9rem;
   font-size: 1.6rem;
   transform: skewX(-12deg); }
-  @media (max-width: 56.25em) {
+  @media (max-width: 990px) {
     .story {
       width: 100%;
       padding: 4rem;
@@ -187,10 +195,16 @@ body {
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem; }
+  height: 65rem; }
+  @media (max-width: 990px) {
+    .card {
+      padding: 2rem; } }
   .card__image {
     max-height: 20rem;
     width: 100%; }
+    @media (max-width: 990px) {
+      .card__image {
+        height: 30rem; } }
   .card__text-booking {
     text-align: center;
     color: #000;
@@ -198,8 +212,12 @@ body {
   .card__text-heading2 {
     padding: 2rem;
     text-align: center; }
+  .card__text--li {
+    padding: 3px; }
+  .card__text--ul {
+    list-style-type: none; }
   .card__side {
-    height: 50rem;
+    height: 65rem;
     transition: all .8s ease;
     position: absolute;
     top: 0;
@@ -219,10 +237,13 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     border-top-left-radius: 3px;
     border-top-right-radius: 3px; }
+    @media (max-width: 990px) {
+      .card__picture {
+        background-size: 50% auto; } }
     .card__picture-1 {
-      background-image: linear-gradient(to right bottom, #76dfa2, #1a5533), url(./images/photo1.jpg); }
+      background-image: linear-gradient(to right bottom, #e4b653, #77602b), url(./images/photo1.jpg); }
     .card__picture-2 {
-      background-image: linear-gradient(to right bottom, #8465ac, #392b4b), url(./images/photo2.jpg); }
+      background-image: linear-gradient(to right bottom, #e96a4d, #773a2b), url(./images/photo2.jpg); }
     .card__picture-3 {
       background-image: linear-gradient(to right bottom, #91A2F0, #2B3977), url(./images/photo3.jpg); }
   .card__heading {
@@ -234,13 +255,17 @@ body {
     right: 2rem;
     text-align: right;
     width: 80%; }
+    @media (max-width: 990px) {
+      .card__heading {
+        right: 6rem;
+        font-size: 3rem; } }
   .card__heading-span {
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone; }
     .card__heading-span-1 {
-      background-image: linear-gradient(to right bottom, #76dfa2, #1a5533); }
+      background-image: linear-gradient(to right bottom, #e4b653, #77602b); }
     .card__heading-span-2 {
-      background-image: linear-gradient(to right bottom, #8465ac, #392b4b); }
+      background-image: linear-gradient(to right bottom, #e96a4d, #773a2b); }
     .card__heading-span-3 {
       background-image: linear-gradient(to right bottom, #91a2f0, #2b3977); }
   .card__detail {
@@ -252,10 +277,6 @@ body {
       font-size: 2rem;
       padding: 2rem;
       margin: 0 auto; }
-  .card__text--ul {
-    list-style-type: none; }
-  .card__text--li {
-    padding: 5px; }
 
 .header {
   height: 95vh;
