--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -31,7 +31,7 @@ $breakpoint argument
         @media(max-width: 37.5em) { @content };
     }
     @if $breakpoint == tab-port {
-        @media(max-width: 56.25em) { @content };
+        @media(max-width: 990px) { @content };
     }
     @if $breakpoint == tab-land {
         @media(max-width: 75em) { @content };
