--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -6,8 +6,8 @@
             text-decoration: none;
             padding: 3px;
             transition: all .3s;
-            color:$color-black;
-            font-size: 1.6rem;
+            color:$color-primary-dark;
+            font-size: 2.6rem;
         }
         &:hover {
             background-color: $color-grey-dark-3;
