--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,10 @@
 @import "components/bg-video";
 @import "components/button";
 @import "components/problem";
+@import "components/steps";
 @import "layout/header";
 @import "layout/grid";
 @import "layout/footer";
 @import "layout/home";
+@import "layout/about";
+@import "layout/cons";
