--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 //Colors
-$color-primary:rgb(57, 77, 158);
-$color-primary-light:#91A2F0;
-$color-primary-dark:#2B3977;
+$color-primary:#2E1965;
+$color-primary-light:	#0CB7CC;
+$color-primary-dark:#380552;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
@@ -10,10 +10,12 @@ $color-grey-light-2: rgb(207, 207, 207);
 $color-grey-dark-1: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
-$color-secondary-light:#e4b653;
-$color-secondary-dark: #77602b;
-$color-tertiary-light:#e96a4d;
-$color-tertiary-dark: #773a2b;
+$color-tertiary: #FF7433;
+$color-secondary: #33ff74;
+$color-secondary-light:#93f5b2;
+$color-secondary-dark: #1d8b40;
+$color-tertiary-light:rgb(253, 164, 122);
+$color-tertiary-dark: rgb(107, 49, 22);
 //Grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
