--- a/src/sass/layout/_home.scss
+++ b/src/sass/layout/_home.scss
@@ -1,3 +1,9 @@
 .section-testimonials {
     position: relative;
 }
+.jumbo-class {
+    
+    background-image: linear-gradient( 135deg,$color-primary-dark,$color-primary 70%, $color-primary-light);
+    
+    clip-path: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
+  }
