--- a/src/index.css
+++ b/src/index.css
@@ -312,7 +312,7 @@ body {
       display: inline-block;
       width: 40%; }
       .steps__heading-2-e1 {
-        color: #7433FF; }
+        color: #2E1965; }
       .steps__heading-2-e2 {
         color: #1d8b40; }
       .steps__heading-2-e3 {
@@ -320,7 +320,7 @@ body {
       .steps__heading-2-e4 {
         color: #380552; }
       .steps__heading-2-e5 {
-        color: #7433FF; }
+        color: #2E1965; }
         @media (max-width: 990px) {
           .steps__heading-2-e5 {
             text-shadow: 2px 2px 4px #000000;
@@ -359,7 +359,7 @@ body {
       .steps__step {
         background-image: linear-gradient(to left bottom, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)); } }
     .steps__step-e1 {
-      background-color: #7433FF; }
+      background-color: #2E1965; }
     .steps__step-e2 {
       background-color: #1d8b40; }
     .steps__step-e3 {
@@ -409,8 +409,7 @@ body {
   position: relative; }
 
 .jumbo-class {
-  background-image: linear-gradient(135deg, #380552, #7433FF 70%, #0CB7CC);
-  clip-path: polygon(0 0, 100% 5%, 100% 95%, 0 100%); }
+  background-image: linear-gradient(135deg, #380552, #2E1965 70%, #0CB7CC); }
 
 .about-carousel-heading {
   margin: 1rem auto !important;
