--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/button";
 @import "components/problem";
 @import "components/steps";
+@import "components/certificate";
 @import "layout/header";
 @import "layout/grid";
 @import "layout/footer";
