--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,20 +1,22 @@
-.navbar-collapse{
-    
-}
-.navbar-header {
-   
-    
-}
-.navbar-header>a, .link-to {
-    
-}
+.navbar-collapse {}
+
+.navbar-header {}
+
+.navbar-header>a,
+.link-to {}
+
 .navbar-default {
-    background-color: #2B3977 !important;  
+    background-color: #2B3977 !important;
     color: white;
 }
-.link-to:hover, .link-to:active {
-    
-}
+
+.link-to:hover,
+.link-to:active {}
+
 #navbar-custom {
-    background-color: #2B3977 !important;   
+    background-color: #2B3977 !important;
+}
+
+#li-button {
+    position: relative;
 }
