--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,4 +1,4 @@
-.btn{
+.btn {
     &__text {
         &:link,
         &:visited {
@@ -6,17 +6,32 @@
             text-decoration: none;
             padding: 3px;
             transition: all .3s;
-            color:$color-primary-dark;
+            color: $color-primary-dark;
             font-size: 2.6rem;
         }
         &:hover {
             background-color: $color-grey-dark-3;
-            color:$color-white;
+            color: $color-white;
             transform: scale(1.2) translateY(-3px);
         }
         &:active {
             transform: translateY(0);
             box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+        }
+    }
+    &-lang {
+        color: $color-white;
+        border: 1px solid $color-white;
+        padding: 1px;
+        border-radius: 3px;
+        width: 50px;
+        text-align: center;
+        margin-top: 10px;
+        &__RUS {
+            background-color: blue;
+        }
+        &__ENG {
+            background-color: red;
         }
     }
 }
