--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
 
 .navbar-default {
     background-color: #2B3977 !important;
-    color: white;
+    color: white !important;
 }
 
 .link-to:hover,
@@ -19,4 +19,9 @@
 
 #li-button {
     position: relative;
+}
+
+#navbar-name {
+    color: white !important;
+    text-decoration: none;
 }
