--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ body {
     transform: translateY(0); } }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lora', serif;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
