--- a/src/index.css
+++ b/src/index.css
@@ -324,6 +324,9 @@ body {
       color: #fff;
       display: inline-block;
       width: 40%; }
+      @media (max-width: 990px) {
+        .steps__heading-2 {
+          width: 100%; } }
       .steps__heading-2-e1 {
         color: #2E1965; }
       .steps__heading-2-e2 {
@@ -354,7 +357,6 @@ body {
             font-size: 2.5rem; } }
         @media (max-width: 990px) {
           .steps__heading-2-pos {
-            display: block;
             color: white;
             text-align: center;
             width: 100%; } }
@@ -478,7 +480,13 @@ body {
   @media (max-width: 990px) {
     .aboutme-list-item {
       line-height: 3rem;
-      font-weight: 800; } }
+      font-weight: 800;
+      font-size: 150%; } }
+  @media (max-width: 37.5em) {
+    .aboutme-list-item {
+      line-height: 3rem;
+      font-weight: 700;
+      font-size: 120%; } }
 
 .about-desc-item:first-child {
   padding-top: 2rem !important; }
@@ -498,3 +506,9 @@ body {
   text-shadow: 2px 2px 4px #000000; }
   .cons__heading-text {
     color: #fff; }
+    @media (max-width: 705px) {
+      .cons__heading-text {
+        font-size: 3.5rem; } }
+    @media (max-width: 37.5em) {
+      .cons__heading-text {
+        font-size: 2.75rem; } }
