--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -5,13 +5,16 @@
         clear: both;
     }
 }
+
 @mixin position-center {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
+
 // media query
+
 /*
 0 - 600px : Phone
 600 - 900px: Tablet portrait
@@ -26,18 +29,37 @@ $breakpoint argument
 -big-desktop
 1em = 16px
 */
+
 @mixin responsive($breakpoint) {
-    @if $breakpoint == phone {
-        @media(max-width: 37.5em) { @content };
+    @if $breakpoint==phone {
+        @media(max-width: 37.5em) {
+            @content
+        }
+        ;
     }
-    @if $breakpoint == tab-port {
-        @media(max-width: 990px) { @content };
+    @if $breakpoint==big-phone {
+        @media(max-width: 705px) {
+            @content
+        }
+        ;
     }
-    @if $breakpoint == tab-land {
-        @media(max-width: 75em) { @content };
+    @if $breakpoint==tab-port {
+        @media(max-width: 990px) {
+            @content
+        }
+        ;
     }
-    @if $breakpoint == big-desktop {
-        @media(min-width: 112em) { @content };
+    @if $breakpoint==tab-land {
+        @media(max-width: 75em) {
+            @content
+        }
+        ;
+    }
+    @if $breakpoint==big-desktop {
+        @media(min-width: 112em) {
+            @content
+        }
+        ;
     }
 }
 
@@ -48,6 +70,7 @@ $breakpoint argument
 @mixin shadow-text {
     text-shadow: 2px 2px 4px #000000;
 }
+
 @mixin shadow-text-white {
     text-shadow: 2px 2px 4px #fff;
 }
