--- a/src/sass/layout/_cons.scss
+++ b/src/sass/layout/_cons.scss
@@ -6,12 +6,18 @@
     position: relative;
     // -webkit-clip-path: polygon(0% 0%, 100% 5%, 100% 95%, 0% 100%);
     // clip-path: polygon(0% 0%, 100% 5%, 100% 95%, 0% 100%);
-    
 }
+
 .cons__heading {
     @include position-center;
     @include shadow-text;
     &-text {
-        color:$color-white;
+        color: $color-white;
+        @include responsive(big-phone) {
+            font-size: 3.5rem;
+        }
+        @include responsive(phone) {
+            font-size: 2.75rem;
+        }
     }
 }
